# vscode_template

./: CMakeLists.txt  README.md  build.sh
inc/: b.h
src/: a.cpp  b.cpp  show.cpp
